web page design

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,7 +1,9 @@
 @model CRM.Models.LoginViewModel
+@{
+    Layout = null;
+}
 
-
-@* <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,8 +16,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
-<body> 
-    <main>*@
+<body>
+    <main>
         <div class="login-container">
             <img src="~/images/gcfxlogo.png" alt="CRM Logo" class="login-logo" />
             <div class="login-box">
@@ -40,7 +42,7 @@
                 </form>
             </div>
         </div>
-    @* </main> *@
+    </main>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -114,6 +116,6 @@
             });
         });
     </script>
-@* </body>
+</body>
 
-</html> *@
+</html>
