--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
 
         <ul style="padding-left:0 !important;" class="nav-menu">
             <li class="active">
+                <a href="@Url.Action("Webpage", "Home")">
+                    <i class="fas fa-tachometer-alt"></i>
+                    <span>Databoard</span>
+                </a>
+            </li>
+            <li class="active">
                 <a href="@Url.Action("Index", "Home")">
                     <i class="fas fa-tachometer-alt"></i>
                     <span>Databoard</span>
