--- a/Views/Home/Webpage.cshtml
+++ b/Views/Home/Webpage.cshtml
@@ -17,10 +17,6 @@
     <link rel="stylesheet" href="~/css/WebPage/accounts.css" />
     <link rel="stylesheet" href="~/css/WebPage/chooseus.css" />
     <link rel="stylesheet" href="~/css/WebPage/footer.css" />
-
-
-
-
 </head>
 
 <body>
@@ -40,8 +36,10 @@
                 </ul>
             </nav>
             <div class="auth-buttons">
-                <a href="#" class="btn btn-secondary" id="loginbtn">Login</a>
-                <a href="#" class="btn btn-primary register">Register</a>
+                <a href="@Url.Action(action: "Login", controller: "Account")" class="btn btn-secondary"
+                    id="loginbtn">Login</a>
+                <a href="@Url.Action(action: "RegisterClient", controller: "Clients")"
+                    class="btn btn-primary register">Register</a>
                 <a href="#" class="btn mobile-menu-btn" id="open-sidebar"><i class="fa fa-bars"
                         aria-hidden="true"></i></a>
                 <button class="btn close-sidebar" id="close-sidebar"><i class="fa fa-times"
