layout using flex

--- a/Views/Clients/Dashboard.cshtml
+++ b/Views/Clients/Dashboard.cshtml
@@ -132,7 +132,7 @@
         margin-bottom: 20px;
     }
 </style>
-
+<link rel="stylesheet" href="~/css/clientsDashboar.css">
 <div class="page">
     <div class="page-header">
         <div class="page-title">
