--- a/Views/Shared/_Layoutnew.cshtml
+++ b/Views/Shared/_Layoutnew.cshtml
@@ -27,12 +27,12 @@
                 <a href="@Url.Action("Index", "Home")">
                     <img src="~/images/gcfxlogo.png" alt="CRM Logo" />
                 </a>
-                <button class="toggle-btn" aria-label="Toggle Sidebar">
+                @* <button class="toggle-btn" aria-label="Toggle Sidebar">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
                         fill="#000000">
                         <path d="M120-680v-80h720v80H120Zm0 480v-80h720v80H120Zm0-240v-80h720v80H120Z" />
                     </svg>
-                </button>
+                </button> *@
             </div>
             <ul class="nav-links">
                 <li><a href="#" id="profileButton">
